--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "vite-template-redux",
+	"name": "wow-ships-explorer",
 	"private": true,
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"build": "tsc -b && vite build",
